// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete component should render correctly when the variant is contained and disabled is true 1`] = `
Array [
  ".wrapper-0-2-1 {
  display: flex;
  font-family: Roboto;
  flex-direction: column;
}
.labelText-0-2-2 {
  font-size: 14px;
  font-family: \\"Roboto\\", Arial;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: 4px;
  letter-spacing: 0.11px;
}
.labelText-0-2-2:disabled {
  color: blue;
}
.inputWrapper-0-2-3 {
  position: relative;
}
.input-0-2-4 {
  width: 100%;
  border: 1px solid;
  outline: none;
  padding: 0 16px;
  position: relative;
  font-size: 16px;
  appearance: none;
  box-sizing: border-box;
  font-weight: 400;
  line-height: 1.25;
  border-radius: 4px;
  padding-right: 45px;
  letter-spacing: 0.51px;
}
.input-0-2-4::placeholder {}
.input-0-2-4:focus:enabled {
  color: #777777;
}
.input-0-2-4:hover:enabled {
  color: #333333;
  border-color: #333333;
}
.icon-0-2-5 {
  top: 0;
  right: 16px;
  cursor: pointer;
  height: 100%;
  display: flex;
  position: absolute;
  align-items: center;
}
.surfaceWrapper-0-2-6 {
  width: 100%;
  position: absolute;
  box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.14);
  max-height: 208px;
  min-height: 48px;
  overflow-y: auto;
  border-radius: 4px;
  background-color: #ffffff;
}
.menuOptionsWrapper-0-2-7 {
  width: 100%;
  margin: 0px;
  display: flex;
  padding: 0px;
  padding-top: 8px;
  border-radius: 4px;
  flex-direction: column;
  padding-bottom: 8px;
}
.optionsItem-0-2-8 {
  width: 100%;
  height: 48px;
  display: flex;
  box-sizing: border-box;
  transition: all 0.3s;
  align-items: center;
  padding-left: 16px;
  border-radius: 4px;
  padding-right: 16px;
}
.optionsItem-0-2-8:hover {
  background-color: #e9ecef;
}
.labelText-d0-0-2-9 {
  color: #bbbbbb;
}
.input-d1-0-2-10 {
  height: 56px;
  background-color: #ffffff;
  border-color: #bbbbbb;
  color: #bbbbbb;
}
.input-d1-0-2-10::placeholder {
  color: #bbbbbb;
}
.input-d1-0-2-10:focus:enabled {
  border-color: #f4ab34;
}
.icon-d2-0-2-11 {
  color: #bbbbbb;
}
.surfaceWrapper-d3-0-2-12 {
  bottom: initial;
}
.optionsItem-d4-0-2-13 {
  color: #bbbbbb;
}
.icon-0-2-14 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-15 {
  color: #000000;
  font-size: 32px;
}",
  <div>
    <div
      class=" wrapper-0-2-1 Autocomplete-gaya"
    >
      <label
        class="labelText-0-2-2 labelText-d0-0-2-9"
      />
      <div
        class="inputWrapper-0-2-3"
      >
        <input
          aria-label="labelText-0-2-2 labelText-d0-0-2-9"
          class="input-0-2-4 input-d1-0-2-10"
          data-testid="input-search"
          disabled=""
          type="text"
          value=""
        />
        <i
          aria-hidden="true"
          class="icon-0-2-5 icon-d2-0-2-11 icon-0-2-14 icon-d0-0-2-15 natds-icons natds-icons-outlined-navigation-arrowbottom Icon-gaya"
          data-testid="icon-outlined-navigation-arrowbottom"
          role="img"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Autocomplete component should render correctly when the variant is contained and feedback is error 1`] = `
Array [
  ".wrapper-0-2-1 {
  display: flex;
  font-family: Roboto;
  flex-direction: column;
}
.labelText-0-2-2 {
  font-size: 14px;
  font-family: \\"Roboto\\", Arial;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: 4px;
  letter-spacing: 0.11px;
}
.labelText-0-2-2:disabled {
  color: blue;
}
.inputWrapper-0-2-3 {
  position: relative;
}
.input-0-2-4 {
  width: 100%;
  border: 1px solid;
  outline: none;
  padding: 0 16px;
  position: relative;
  font-size: 16px;
  appearance: none;
  box-sizing: border-box;
  font-weight: 400;
  line-height: 1.25;
  border-radius: 4px;
  padding-right: 45px;
  letter-spacing: 0.51px;
}
.input-0-2-4::placeholder {}
.input-0-2-4:focus:enabled {
  color: #777777;
}
.input-0-2-4:hover:enabled {
  color: #333333;
  border-color: #333333;
}
.icon-0-2-5 {
  top: 0;
  right: 16px;
  cursor: pointer;
  height: 100%;
  display: flex;
  position: absolute;
  align-items: center;
}
.surfaceWrapper-0-2-6 {
  width: 100%;
  position: absolute;
  box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.14);
  max-height: 208px;
  min-height: 48px;
  overflow-y: auto;
  border-radius: 4px;
  background-color: #ffffff;
}
.menuOptionsWrapper-0-2-7 {
  width: 100%;
  margin: 0px;
  display: flex;
  padding: 0px;
  padding-top: 8px;
  border-radius: 4px;
  flex-direction: column;
  padding-bottom: 8px;
}
.optionsItem-0-2-8 {
  width: 100%;
  height: 48px;
  display: flex;
  box-sizing: border-box;
  transition: all 0.3s;
  align-items: center;
  padding-left: 16px;
  border-radius: 4px;
  padding-right: 16px;
}
.optionsItem-0-2-8:hover {
  background-color: #e9ecef;
}
.labelText-d0-0-2-9 {
  color: #e74627;
}
.input-d1-0-2-10 {
  height: 56px;
  background-color: #ffffff;
  border-color: #e74627;
  color: #333333;
}
.input-d1-0-2-10::placeholder {
  color: #333333;
}
.input-d1-0-2-10:focus:enabled {
  border-color: #f4ab34;
}
.icon-d2-0-2-11 {
  color: inherit;
}
.surfaceWrapper-d3-0-2-12 {
  bottom: initial;
}
.optionsItem-d4-0-2-13 {
  color: #777777;
}
.icon-0-2-14 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-15 {
  color: #000000;
  font-size: 32px;
}",
  <div>
    <div
      class=" wrapper-0-2-1 Autocomplete-gaya"
    >
      <label
        class="labelText-0-2-2 labelText-d0-0-2-9"
      />
      <div
        class="inputWrapper-0-2-3"
      >
        <input
          aria-label="labelText-0-2-2 labelText-d0-0-2-9"
          class="input-0-2-4 input-d1-0-2-10"
          data-testid="input-search"
          type="text"
          value=""
        />
        <i
          aria-hidden="true"
          class="icon-0-2-5 icon-d2-0-2-11 icon-0-2-14 icon-d0-0-2-15 natds-icons natds-icons-outlined-navigation-arrowbottom Icon-gaya"
          data-testid="icon-outlined-navigation-arrowbottom"
          role="img"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Autocomplete component should render correctly when the variant is contained and feedback is success 1`] = `
Array [
  ".wrapper-0-2-1 {
  display: flex;
  font-family: Roboto;
  flex-direction: column;
}
.labelText-0-2-2 {
  font-size: 14px;
  font-family: \\"Roboto\\", Arial;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: 4px;
  letter-spacing: 0.11px;
}
.labelText-0-2-2:disabled {
  color: blue;
}
.inputWrapper-0-2-3 {
  position: relative;
}
.input-0-2-4 {
  width: 100%;
  border: 1px solid;
  outline: none;
  padding: 0 16px;
  position: relative;
  font-size: 16px;
  appearance: none;
  box-sizing: border-box;
  font-weight: 400;
  line-height: 1.25;
  border-radius: 4px;
  padding-right: 45px;
  letter-spacing: 0.51px;
}
.input-0-2-4::placeholder {}
.input-0-2-4:focus:enabled {
  color: #777777;
}
.input-0-2-4:hover:enabled {
  color: #333333;
  border-color: #333333;
}
.icon-0-2-5 {
  top: 0;
  right: 16px;
  cursor: pointer;
  height: 100%;
  display: flex;
  position: absolute;
  align-items: center;
}
.surfaceWrapper-0-2-6 {
  width: 100%;
  position: absolute;
  box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.14);
  max-height: 208px;
  min-height: 48px;
  overflow-y: auto;
  border-radius: 4px;
  background-color: #ffffff;
}
.menuOptionsWrapper-0-2-7 {
  width: 100%;
  margin: 0px;
  display: flex;
  padding: 0px;
  padding-top: 8px;
  border-radius: 4px;
  flex-direction: column;
  padding-bottom: 8px;
}
.optionsItem-0-2-8 {
  width: 100%;
  height: 48px;
  display: flex;
  box-sizing: border-box;
  transition: all 0.3s;
  align-items: center;
  padding-left: 16px;
  border-radius: 4px;
  padding-right: 16px;
}
.optionsItem-0-2-8:hover {
  background-color: #e9ecef;
}
.labelText-d0-0-2-9 {
  color: #569a32;
}
.input-d1-0-2-10 {
  height: 56px;
  background-color: #ffffff;
  border-color: #569a32;
  color: #333333;
}
.input-d1-0-2-10::placeholder {
  color: #333333;
}
.input-d1-0-2-10:focus:enabled {
  border-color: #f4ab34;
}
.icon-d2-0-2-11 {
  color: inherit;
}
.surfaceWrapper-d3-0-2-12 {
  bottom: initial;
}
.optionsItem-d4-0-2-13 {
  color: #777777;
}
.icon-0-2-14 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-15 {
  color: #000000;
  font-size: 32px;
}",
  <div>
    <div
      class=" wrapper-0-2-1 Autocomplete-gaya"
    >
      <label
        class="labelText-0-2-2 labelText-d0-0-2-9"
      />
      <div
        class="inputWrapper-0-2-3"
      >
        <input
          aria-label="labelText-0-2-2 labelText-d0-0-2-9"
          class="input-0-2-4 input-d1-0-2-10"
          data-testid="input-search"
          type="text"
          value=""
        />
        <i
          aria-hidden="true"
          class="icon-0-2-5 icon-d2-0-2-11 icon-0-2-14 icon-d0-0-2-15 natds-icons natds-icons-outlined-navigation-arrowbottom Icon-gaya"
          data-testid="icon-outlined-navigation-arrowbottom"
          role="img"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Autocomplete component should render correctly with default props 1`] = `
Array [
  ".wrapper-0-2-1 {
  display: flex;
  font-family: Roboto;
  flex-direction: column;
}
.labelText-0-2-2 {
  font-size: 14px;
  font-family: \\"Roboto\\", Arial;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: 4px;
  letter-spacing: 0.11px;
}
.labelText-0-2-2:disabled {
  color: blue;
}
.inputWrapper-0-2-3 {
  position: relative;
}
.input-0-2-4 {
  width: 100%;
  border: 1px solid;
  outline: none;
  padding: 0 16px;
  position: relative;
  font-size: 16px;
  appearance: none;
  box-sizing: border-box;
  font-weight: 400;
  line-height: 1.25;
  border-radius: 4px;
  padding-right: 45px;
  letter-spacing: 0.51px;
}
.input-0-2-4::placeholder {}
.input-0-2-4:focus:enabled {
  color: #777777;
}
.input-0-2-4:hover:enabled {
  color: #333333;
  border-color: #333333;
}
.icon-0-2-5 {
  top: 0;
  right: 16px;
  cursor: pointer;
  height: 100%;
  display: flex;
  position: absolute;
  align-items: center;
}
.surfaceWrapper-0-2-6 {
  width: 100%;
  position: absolute;
  box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.14);
  max-height: 208px;
  min-height: 48px;
  overflow-y: auto;
  border-radius: 4px;
  background-color: #ffffff;
}
.menuOptionsWrapper-0-2-7 {
  width: 100%;
  margin: 0px;
  display: flex;
  padding: 0px;
  padding-top: 8px;
  border-radius: 4px;
  flex-direction: column;
  padding-bottom: 8px;
}
.optionsItem-0-2-8 {
  width: 100%;
  height: 48px;
  display: flex;
  box-sizing: border-box;
  transition: all 0.3s;
  align-items: center;
  padding-left: 16px;
  border-radius: 4px;
  padding-right: 16px;
}
.optionsItem-0-2-8:hover {
  background-color: #e9ecef;
}
.labelText-d0-0-2-9 {
  color: #333333;
}
.input-d1-0-2-10 {
  height: 56px;
  background-color: #ffffff;
  border-color: #333333;
  color: #333333;
}
.input-d1-0-2-10::placeholder {
  color: #333333;
}
.input-d1-0-2-10:focus:enabled {
  border-color: #f4ab34;
}
.icon-d2-0-2-11 {
  color: inherit;
}
.surfaceWrapper-d3-0-2-12 {
  bottom: initial;
}
.optionsItem-d4-0-2-13 {
  color: #777777;
}
.icon-0-2-14 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-15 {
  color: #000000;
  font-size: 32px;
}",
  <div>
    <div
      class=" wrapper-0-2-1 Autocomplete-gaya"
    >
      <label
        class="labelText-0-2-2 labelText-d0-0-2-9"
      />
      <div
        class="inputWrapper-0-2-3"
      >
        <input
          aria-label="labelText-0-2-2 labelText-d0-0-2-9"
          class="input-0-2-4 input-d1-0-2-10"
          data-testid="input-search"
          type="text"
          value=""
        />
        <i
          aria-hidden="true"
          class="icon-0-2-5 icon-d2-0-2-11 icon-0-2-14 icon-d0-0-2-15 natds-icons natds-icons-outlined-navigation-arrowbottom Icon-gaya"
          data-testid="icon-outlined-navigation-arrowbottom"
          role="img"
        />
      </div>
    </div>
  </div>,
]
`;
